samples/_failures_safe/1761788564_7b4c04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a661d2c.c: In function ‘print_errors’:
./samples/SAFE/__tmp_7a661d2c.c:129:9: error: expected declaration or statement at end of input
  129 |         if (strcmp(analyzer->entries[i].level, "ERROR") == 0) {
      |         ^~
./samples/SAFE/__tmp_7a661d2c.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a661d2c.c:129:9: error: expected declaration or statement at end of input
